2003-10-28  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3465383>: REGRESSION: Text field progress bar goes to 100% after error or stop
	
        Reviewed by john.

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _isLoadComplete]): call _progressCompleted after we deliver the didFailLoadWithError or didFinishLoadForFrame message as we do in other places. This allows to be aware of the error (if there is one), when they get the WebViewProgressFinishedNotification notification.

2003-10-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3083264 - frame names changed by JavaScript are not reflected in WebFrame at the WebKit level

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge didSetName:]): Tell the WebFrame about its new name.

2003-10-28  John Sullivan  <sullivan@apple.com>

	- fixed 3465613 -- REGRESSION (111): Crash creating nib that 
	contains WebView

        Reviewed by Chris.

        * WebView.subproj/WebView.m:
        (-[WebView mainFrame]):
	check for nil _private before dereferencing.

2003-10-28  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3465591>: Security: Netscape plug-ins can execute JavaScript in other frames

        Reviewed by mjs.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView evaluateJavaScriptPluginRequest:]): renamed, no need to pass the target frame since the target is either the plug-in itself or the frame that contains the plug-in
        (-[WebBaseNetscapePluginView loadPluginRequest:]): call renamed evaluateJavaScriptPluginRequest
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]): if this is a JS request that is targeted at a frame, return NPERR_INVALID_PARAM if the frame is not the frame that contains the plugin

2003-10-28  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3437959>: javascript: URLs don't work from Java (and other Cocoa plugins, if any)
